--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "start": "node .",
+    "start": "pm2-runtime start ecosystem.config.js --env production",
     "posttest": "npm run lint"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^6.2.0",
     "loopback-connector-mongodb": "^5.2.3",
+    "pm2": "^4.4.0",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^3.0.0"
   },
